Fix spacing issues and add footer

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="prlx-1"></div>
         <h2>Ashley Sullins</h2>
         <div class="top-social"> 
-              <a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-              <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
-              <a href="https://www.facebook.com/ashleydsullins" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
-              <a href="https://www.pinterest.com/mizashley0921/" target="_blank"><i class="fa fa-pinterest fa-2x"></i></a>
-            </div>
+          <a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+          <a href="https://www.facebook.com/ashleydsullins" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+          <a href="https://www.pinterest.com/mizashley0921/" target="_blank"><i class="fa fa-pinterest fa-2x"></i></a>
+        </div>
       </section>
       <a name="about"></a>
       <section class="section-two">
@@ -58,12 +58,12 @@
             <li>Gradle</li>
           </ul>
           <p><span class="skills-category">Quality Assurance</span></p>
-            <ul>
-              <li>JUnit</li>
-              <li>Selenium</li>
-              <li>Manual Testing</li>
-            </ul>
-      </div>
+          <ul>
+            <li>JUnit</li>
+            <li>Selenium</li>
+            <li>Manual Testing</li>
+          </ul>
+        </div>
       </section>
       <a name="projects"></a>
       <section class="section-three">
@@ -110,7 +110,6 @@
                   </div>
                 </div>
               </div>
-
             </div>
             <div class="col-md-4">
               <a class="popup" href="#codeoverload"><img src="img/codeoverload.png" class="img-responsive"></a>
@@ -121,17 +120,16 @@
                       <p><img src="img/codeoverload.png" class="img-responsive"></p>
                     </div>
                     <div class="col-md-5">
-                    <p><span class="title">Description:</span> Code Overload is a Stack Overflow-eque website where you can find out all of the answers to your burning questions about coding and people will give you suggestions on how to fix the issue. Questions can be posted and edited by users, and answers can be submitted on each individual question page.</p>
+                      <p><span class="title">Description:</span> Code Overload is a Stack Overflow-eque website where you can find out all of the answers to your burning questions about coding and people will give you suggestions on how to fix the issue. Questions can be posted and edited by users, and answers can be submitted on each individual question page.</p>
 
-                    <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of Ember.</p>
+                      <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of Ember.</p>
 
-                    <p><span class="title">Technologies used:</span> Ember.js, Bootstrap, HTML, CSS, and Firebase.
+                      <p><span class="title">Technologies used:</span> Ember.js, Bootstrap, HTML, CSS, and Firebase.
 
-                    <p> <a href="https://code-overload.firebaseapp.com/" target="_blank">code-overload.firebaseapp.com</a></p>
+                      <p> <a href="https://code-overload.firebaseapp.com/" target="_blank">code-overload.firebaseapp.com</a></p>
                   </div>
                 </div>
               </div>
-
           </div>
         </div>
           <div class="row">
@@ -145,11 +143,11 @@
                       <p><img src="img/tourguidepdx2.png" class="img-responsive"></p>
                     </div>
                     <div class="col-md-5">
-                    <p><span class="title">Description:</span> Tour Guide PDX is an Android app used to assist new visitors to Portland. It highlights the most unique dining, drinking establishments, and attractions in the area.</p>
+                      <p><span class="title">Description:</span> Tour Guide PDX is an Android app used to assist new visitors to Portland. It highlights the most unique dining, drinking establishments, and attractions in the area.</p>
 
-                    <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of how to create an Android application.</p>
+                      <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of how to create an Android application.</p>
 
-                    <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Parse.
+                      <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Parse.
 
                      <p><a href="https://github.com/ashleysullins/TourGuidePDX" target="_blank">Repository</a></p> 
                   </div>
@@ -165,13 +163,13 @@
                       <p><img src="img/funimages.png" class="img-responsive"></p>
                     </div>
                     <div class="col-md-5">
-                    <p><span class="title">Description:</span> This app will allow you to see images from Flickr based on a keyword you provide. When you shake your phone, it will show a new image based on the same keyword.</p>
+                      <p><span class="title">Description:</span> This app will allow you to see images from Flickr based on a keyword you provide. When you shake your phone, it will show a new image based on the same keyword.</p>
 
-                    <p><span class="title">My contribution:</span> I pair programmed with Yvonne Peng to create this application to learn how to use data from APIs and the Android system's internal motion detector.</p>
+                      <p><span class="title">My contribution:</span> I pair programmed with Yvonne Peng to create this application to learn how to use data from APIs and the Android system's internal motion detector.</p>
 
-                    <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Flickr API.
+                      <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Flickr API.
 
-                    <p><a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">Repository</a></p>  
+                      <p><a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">Repo</a></p>  
                   </div>
                 </div>
               </div>
@@ -185,20 +183,20 @@
           <div class="col-md-6">
             <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://asullins.wufoo.com/forms/z1wsul1d1xwciuq/#public">
               <div class="form-group">
-              <input id="Field1" name="Field1" type="text" class="field text fn form-control" value="" placeholder="First Name" tabindex="1"       />
+                <input id="Field1" name="Field1" type="text" class="field text fn form-control" value="" placeholder="First Name" tabindex="1"       />
               </div>
               <div class="form-group">
-              <input id="Field2" name="Field2" type="text" class="field text ln form-control" value="" placeholder="Last Name" size="14" tabindex="2" />
+                <input id="Field2" name="Field2" type="text" class="field text ln form-control" value="" placeholder="Last Name" size="14" tabindex="2" />
               </div>
               <div class="form-group">
-              <input id="Field15" name="Field15" type="email" spellcheck="false" class="field text medium form-control" value="" placeholder="Email Address" maxlength="255" tabindex="3"       />
+                <input id="Field15" name="Field15" type="email" spellcheck="false" class="field text medium form-control" value="" placeholder="Email Address" maxlength="255" tabindex="3"       />
               </div>
               <div class="form-group">
-              <textarea id="Field16" name="Field16" class="field textarea large form-control" value="" placeholder="Message" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+                <textarea id="Field16" name="Field16" class="field textarea large form-control" value="" placeholder="Message" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
               </div>
             <div>
-            <input id="saveForm" name="saveForm" class="submit btn btn-default" type="submit" value="Submit"/>
-            <input type="hidden" id="idstamp" name="idstamp" value="oNGSnK+vX2IZ9BLW7/h3+8RtOnTHYm54yStTOH+DiGE=" />
+              <input id="saveForm" name="saveForm" class="submit btn btn-default" type="submit" value="Submit"/>
+              <input type="hidden" id="idstamp" name="idstamp" value="oNGSnK+vX2IZ9BLW7/h3+8RtOnTHYm54yStTOH+DiGE=" />
             </div>
           </div>
           <div class="col-md-4">
@@ -211,6 +209,7 @@
         </div>
       </section>
       <footer class="site-footer" itemtype="http://schema.org/WPFooter" itemscope="itemscope" role="contentinfo">
+        <p>Copyright 2015 Ashley Sullins</p>
       </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>  
