--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ > 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
     <title>Ashley Sullins</title>
@@ -17,8 +17,7 @@
       <div class="wrap">
         <nav itemtype="http://schema.org/SiteNavigationElement" itemscope="itemscope" role="navigation">
           <ul class="menu">
-              <li class="menu-item"><a href="#welcome">Welcome</a></li>
-              <li class="menu-item"><a href="#about">About</a></li>
+              <li class="menu-item"><a href="#about" class="nav-close">About</a></li>
               <li class="menu-item"><a href="#projects">Projects</a></li>
               <li class="menu-item"><a href="#contact">Contact</a></li>
             </ul> 
@@ -33,6 +32,7 @@
           <a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
           <a href="https://www.facebook.com/ashleydsullins" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+          <a href="https://www.instagram.com/ashleycc1987/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
           <a href="https://www.pinterest.com/mizashley0921/" target="_blank"><i class="fa fa-pinterest fa-2x"></i></a>
         </div>
       </section>
@@ -40,29 +40,30 @@
       <section class="section-two">
         <h2>About</h2>
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-7">
           <h4>Hi. I'm Ashley. Nice to meet ya.</h4>
-          <p>I've spent the last four years working at tech start ups in the Kansas City area, doing everything from operations to project management to quality assurance testing. During that time, I've been fortunate to work with mentors who inspired me to learn more about software development. I desired more time to focus on my education, which led me to Portland, where I studied Java, Javascript and Android development at <a href="http://www.epicodus.com" target="_blank">Epicodus</a> in 2015.</p>
-          <p>I love working on small teams with passionate people who want to be the best. If that sounds like your team, feel free to <a href="#contact">contact me</a>. </p>
+          <p>I've spent the last four years working at tech startups in the Kansas City area, doing everything from operations to project management to quality assurance testing. During that time, I've been fortunate to work with talented engineers who inspired me to learn more about software development. I desired more time to focus on my education, which led me to Portland, where I studied Javascript and Android development at <a href="http://www.epicodus.com" target="_blank">Epicodus</a> in the fall of 2015.</p>
+          <p>I have been working on a Django application with a focus on front-end web development at a <a href="http://big6media.com" target="_blank">marketing startup</a> in Overland Park, Kansas, since January 2016.</p>
+          <p>I love working on small teams with passionate people who want to create great software. If that sounds like your team, feel free to <a href="#contact">contact me</a>. </p>
         </div>
-        <div class="col-md-4 skills">
-          <h4><span class="skills">Skills</span></h4>
-          <p><span class="skills-category">Development</span></p>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Git</li>
-            <li>Command Line</li>
-            <li>Javascript</li>
-            <li>Android Studio </li>
-            <li>Gradle</li>
-          </ul>
-          <p><span class="skills-category">Quality Assurance</span></p>
-          <ul>
-            <li>JUnit</li>
-            <li>Selenium</li>
-            <li>Manual Testing</li>
-          </ul>
+        <div class="col-md-5">
+          <div class="skills-div">
+            <h4>Technical Skills</h4>
+            <p><span class="skills-category">Development</span></p>
+            <ul>
+              <li><b>HTML5</b> - Advanced</li>
+              <li><b>CSS3</b> - Advanced</li>
+              <li><b>Git and Command Line</b> - Intermediate</li>
+              <li><b>Django</b> - Proficient</li>
+              <li><b>Python</b> - Proficient</li>
+              <li><b>Javascript/jQuery</b> - Beginner</li>
+            </ul>
+            <p><span class="skills-category">Quality Assurance</span></p>
+            <ul>
+              <li><b>Selenium Automation</b> - Proficient</li>
+              <li><b>Manual Testing</b> - Advanced</li>
+            </ul>
+          </div>
         </div>
       </section>
       <a name="projects"></a>
@@ -71,7 +72,30 @@
         <h2><span class="projects">Projects</span></h2>
           <div class="row">
             <div class="col-md-4">
-              <a class="popup" href="#storedge"><img src="img/storedgehelphome.png" class="img-responsive"></a>
+                <a class="popup" href="#jomlaw">
+                  <img src="img/jomlawheader.png" class="img-responsive filter">
+                </a>
+                <div class="info" id="jomlaw">
+                  <h3>Jacobs, O'Hara and McMullen</h3>
+                  <div class="row">
+                    <div class="col-md-5">
+                      <p><img src="img/jomlawheader.png" class="img-responsive"></p>
+                      <p><img src="img/jomlawfooter.png" class="img-responsive"></p>
+                    </div>
+                    <div class="col-md-5">
+                    <p><span class="title">Description:</span> This is a marketing site for a group of lawyers practicing in New Orleans and Houston. </p>
+
+                    <p><span class="title">My contribution:</span> I implemented the style for the site using Django, HTML and CSS. It is fluid responsive and SEO-optimized.</p>
+
+                    <p>Designed by Daniel Held.</p>
+
+                    <p><a href="http://www.jomlawfirm.com/" target="_blank">jomlawfirm.com</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <a class="popup" href="#storedge"><img src="img/storedgehelphome.png" class="img-responsive filter"></a>
                 <div class="info" id="storedge">
                   <h3>storEDGE Help</h3>
                   <div class="row">
@@ -92,7 +116,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <a class="popup" href="#helpqueue"><img src="img/helpqueue.png" class="img-responsive"></a>
+              <a class="popup" href="#helpqueue"><img src="img/helpqueue.png" class="img-responsive filter"></a>
                 <div class="info" id="helpqueue">
                   <h3>Help Queue</h3>
                   <div class="row">
@@ -112,7 +136,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <a class="popup" href="#codeoverload"><img src="img/codeoverload.png" class="img-responsive"></a>
+              <a class="popup" href="#codeoverload"><img src="img/codeoverload.png" class="img-responsive filter"></a>
                 <div class="info" id="codeoverload">
                   <h3>Code Overload</h3>
                   <div class="row">
@@ -131,50 +155,48 @@
                 </div>
               </div>
           </div>
+          <div class="col-md-4">
+            <a class="popup" href="#tourguidepdx"><img src="img/tourguidepdx.png" class="img-responsive filter"></a>
+             <div class="info" id="tourguidepdx">
+                <h3>Tour Guide PDX</h3>
+                <div class="row">
+                  <div class="col-md-5">
+                    <p><img src="img/tourguidepdx.png" class="img-responsive"></p>
+                    <p><img src="img/tourguidepdx2.png" class="img-responsive"></p>
+                  </div>
+                  <div class="col-md-5">
+                    <p><span class="title">Description:</span> Tour Guide PDX is an Android app used to assist new visitors to Portland. It highlights the most unique dining, drinking establishments, and attractions in the area.</p>
+
+                    <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of how to create an Android application.</p>
+
+                    <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Parse.
+
+                   <p><a href="https://github.com/ashleysullins/TourGuidePDX" target="_blank">Repository</a></p> 
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <a class="popup" href="#funimages"><img src="img/funimages.png" class="img-responsive filter"></a>
+            <div class="info" id="funimages">
+                <h3>Fun Images</h3>
+                <div class="row">
+                  <div class="col-md-5">
+                    <p><img src="img/funimages.png" class="img-responsive"></p>
+                  </div>
+                  <div class="col-md-5">
+                    <p><span class="title">Description:</span> This app will allow you to see images from Flickr based on a keyword you provide. When you shake your phone, it will show a new image based on the same keyword.</p>
+
+                    <p><span class="title">My contribution:</span> I pair programmed with Yvonne Peng to create this application to learn how to use data from APIs and the Android system's internal motion detector.</p>
+
+                    <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Flickr API.
+
+                    <p><a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">Repo</a></p>  
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-          <div class="row">
-            <div class="col-md-4">
-              <a class="popup" href="#tourguidepdx"><img src="img/tourguidepdx.png" class="img-responsive"></a>
-               <div class="info" id="tourguidepdx">
-                  <h3>Tour Guide PDX</h3>
-                  <div class="row">
-                    <div class="col-md-5">
-                      <p><img src="img/tourguidepdx.png" class="img-responsive"></p>
-                      <p><img src="img/tourguidepdx2.png" class="img-responsive"></p>
-                    </div>
-                    <div class="col-md-5">
-                      <p><span class="title">Description:</span> Tour Guide PDX is an Android app used to assist new visitors to Portland. It highlights the most unique dining, drinking establishments, and attractions in the area.</p>
-
-                      <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of how to create an Android application.</p>
-
-                      <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Parse.
-
-                     <p><a href="https://github.com/ashleysullins/TourGuidePDX" target="_blank">Repository</a></p> 
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <a class="popup" href="#funimages"><img src="img/funimages.png" class="img-responsive"></a>
-              <div class="info" id="funimages">
-                  <h3>Fun Images</h3>
-                  <div class="row">
-                    <div class="col-md-5">
-                      <p><img src="img/funimages.png" class="img-responsive"></p>
-                    </div>
-                    <div class="col-md-5">
-                      <p><span class="title">Description:</span> This app will allow you to see images from Flickr based on a keyword you provide. When you shake your phone, it will show a new image based on the same keyword.</p>
-
-                      <p><span class="title">My contribution:</span> I pair programmed with Yvonne Peng to create this application to learn how to use data from APIs and the Android system's internal motion detector.</p>
-
-                      <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Flickr API.
-
-                      <p><a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">Repo</a></p>  
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>  
       </section>
       <a name="contact"></a>
       <section class="section-four">
@@ -201,15 +223,16 @@
           </div>
           <div class="col-md-4">
             <div class="social"> 
-              <br><a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i> asullins</a></br>
+              <br><a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i> ashleysullins</a></br>
               <br><a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><i class="fa fa-linkedin fa-2x"></i> ashleysullins</a></br>
               <br><a href="https://www.facebook.com/ashleydsullins" target="_blank"><i class="fa fa-facebook fa-2x"></i> ashleydsullins</a></br>
+              <br><a href="https://www.instagram.com/ashleycc1987/" target="_blank"><i class="fa fa-instagram fa-2x"></i> ashleycc1987</a></br>
               <br><a href="https://www.pinterest.com/mizashley0921/" target="_blank"><i class="fa fa-pinterest fa-2x"></i> mizashley0921</a></br>
             </div>
         </div>
       </section>
       <footer class="site-footer" itemtype="http://schema.org/WPFooter" itemscope="itemscope" role="contentinfo">
-        <p>Copyright 2015 Ashley Sullins</p>
+        <p>Copyright 2016 - Ashley Sullins</p>
       </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>  
