--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ > 
+    <link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
@@ -20,7 +20,7 @@
                 <li class="menu-item"><a href="#about" class="nav-close">About</a></li>
                 <li class="menu-item"><a href="#projects">Projects</a></li>
                 <li class="menu-item"><a href="#contact">Contact</a></li>
-              </ul> 
+              </ul>
            </nav>
         </div>
       </div>
@@ -29,7 +29,7 @@
     <section class="section-one">
       <div class="prlx-1"></div>
       <h2>Ashley Sullins</h2>
-      <div class="top-social"> 
+      <div class="top-social">
         <a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i></a>
         <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
         <a href="https://www.facebook.com/ashleydsullins" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
@@ -204,7 +204,7 @@
 
                   <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Parse.
 
-                 <p><a href="https://github.com/ashleysullins/TourGuidePDX" target="_blank">Repository</a></p> 
+                 <p><a href="https://github.com/ashleysullins/TourGuidePDX" target="_blank">Repository</a></p>
               </div>
             </div>
           </div>
@@ -224,7 +224,7 @@
 
                   <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Flickr API.
 
-                  <p><a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">Repo</a></p>  
+                  <p><a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">Repo</a></p>
               </div>
             </div>
           </div>
@@ -256,7 +256,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="social"> 
+          <div class="social">
             <br><a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i> ashleysullins</a></br>
             <br><a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><i class="fa fa-linkedin fa-2x"></i> ashleysullins</a></br>
             <br><a href="https://www.facebook.com/ashleydsullins" target="_blank"><i class="fa fa-facebook fa-2x"></i> ashleydsullins</a></br>
@@ -266,17 +266,17 @@
       </div>
     </section>
     <footer class="site-footer" itemtype="http://schema.org/WPFooter" itemscope="itemscope" role="contentinfo">
-      <p>Copyright 2016 - Ashley Sullins</p>
+      <p>Copyright <script type="text/javascript">document.write(new Date().getFullYear());</script> - Ashley Sullins</p>
     </footer>
     <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
     <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
     <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
     <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
     <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
     <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
-    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>  
+    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
